Fix the blank letters calculation and refactor (#16)
* Change the converter jar name

* Refactor the server to use a single gaddag file specified by the user

* Remove redundant fields from DTO, fix the blank field recognition on the board